# Texas-Holdem-Poker

./: .gitignore  README.md  docker-compose.yml  fix-tests.sh  package-lock.json
backend/: .dockerignore  .env.example  .flake8  Dockerfile  README.md  __init__.py  pyproject.toml  run_test.sh
backend/app/: database.py  main.py
backend/app/models/: hand.py
backend/app/repositories/: hand_repository.py
backend/app/services/: poker_service.py
backend/tests/: poker_service_test.py  test_api.py  test_poker_service.py
database/: init.sql
frontend/: Dockerfile  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json
frontend/__tests__/: gameStore.test.ts  intergation.test.tsx
frontend/src/app/: HandHistory.tsx  PokerTable.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: GameTable.tsx  HandHistory.tsx  PlayLog.tsx
frontend/src/components/ui/: ActionButtons.jsx  ActionButtons.tsx  Setup.jsx  Setup.tsx
frontend/src/store/: gameStore.js  gameStore.ts
